--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard Métaux</title>
+    <link rel="icon" type="image/png"
+      href="https://raw.githubusercontent.com/STS-Engineer/LME_Dashboard/main/templates/Gemini_Generated_Image_gc66sygc66sygc66.png">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <style>
         * {
